# axum_templates

./: Cargo.toml
src/: main.rs
templates/: hello.html
